---------------------------------------------------------------------------------------------------
Version: 1.10.0
Date:

  Features:
     - Added combat robots, construction robot, logistic robot as flyer units.
     - construction robot handles building proxy spawners.
     - logistic robot handles the dropship role.
     - Vanilla race now support all features of ERM mod.

  Changes:
     - Biters now support movement speed multiplier.

---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 2021-10-27

  Bugfixes:
    - Fixed an issue which custom attack group only spawn at first SE attackable planet.

---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2021-10-23

  Bugfixes:
    - Disable debug mode XD

---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 2021-10-23

  Features:
    - Custom attack group can now spawn in Space Exploration planets!
    - Custom attack group is now out of beta.
    - Enemy running/flying speed can now adjustable in startup setting.
    - Added a detailed window to show race's additional information and adjustment
    - Added total units and structures kill count to detailed window
    - Enemy level can be override in detail UI window.

  Changes:
    - Added default values to setting tooltips
    - Add remote function to generate dropship attack group
    - Significantly lower `level up evolution points to { 10, 20, 35, 50, 65, 80, 100, 150, 200, 250, 300, 400, 500, 650, 800, 1000, 1250 }

  Bugfixes:
    - Fixed a bug in attack group chunk processor's find_spawn_location()
    - Fixed an attack meter points calculation inaccuracy issue.

---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 2021-09-30

  Changes: