@@ -22,6 +22,13 @@ enemyracemanager-2way-group-enemy-positive=[2 races split] Race for Positive Axi
 enemyracemanager-2way-group-enemy-negative=[2 races split] Race for Negative Axis
 enemyracemanager-2way-group-split-point=[2 races split] Center point for split [img=info]
 
+enemyracemanager-4way-x-axis=[4 races split] Center point for X Axis [img=info]
+enemyracemanager-4way-y-axis=[4 races split] Center point for Y Axis [img=info]
+enemyracemanager-4way-top-left=[4 races split] Top Left Race
+enemyracemanager-4way-top-right=[4 races split] Top Right Race
+enemyracemanager-4way-bottom-right=[4 races split] Bottom Right Race
+enemyracemanager-4way-bottom-left=[4 races split] Bottom Left Race
+
 enemyracemanager-enhance-defense=[Defense] Enhanced Base Game Defenses [img=info]
 enemyracemanager-ground-weapon-hit-air=[Defense] Allow ground weapons to hit air units [img=info]
 
@@ -62,6 +69,9 @@ enemyracemanager-max-group-size=Map setting: Max Group Size.  Base game defaults
 enemyracemanager-mapping-method=This option controls how enemy are spawn when new chunk is mapped. \n[font=default-bold]Default[/font] - All races are mixed together. \n[font=default-bold]2 Races Split[/font] - 2 defined races, Race A spawns at positive axis and Race B spawns at negative axis. \n[font=default-bold]1 race / surface[/font] - Each surface has its assigned race. The mod makes sure the spawned unit spawners and worms matches the assigned race.
 enemyracemanager-2way-group-enemy-orientation=This option controls whether races are divided by (X-axis) East/West or (Y-axis) North/South.
 enemyracemanager-2way-group-split-point=This option controls where split starts. e.g -10000 makes split happens at -10000 of the axis you choose above. \n\nRange: -900000 - 900000, Default: 0
+
+enemyracemanager-4way-x-axis=This option controls where split starts. e.g -10000 makes split happens at -10000 of X axis.\n\nRange: -900000 - 900000, Default: 0
+enemyracemanager-4way-y-axis=This option controls where split starts. e.g -10000 makes split happens at -10000 of Y axis.\n\nRange: -900000 - 900000, Default: 0
 
 enemyracemanager-enhance-defense=Buff base game's defense items. Armors, vehicles and wall have their damage resistances increase and vehicle's damage output increase. \n\nDefault: ON
 enemyracemanager-ground-weapon-hit-air=Ground weapons' projectiles can hit air units when this is enabled. E.g. shotgun pellets, tank cannon shells, grenade. \n\nDefault: OFF
