@@ -1,6 +1,8 @@
 MAP_GEN_DEFAULT = 'Default'
 MAP_GEN_2_RACES_SPLIT = '2 Races Split'
+MAP_GEN_4_RACES_SPLIT = '4 Races Split'
 MAP_GEN_1_RACE_PER_SURFACE = '1 Race / Surface'
+
 
 MAX_LEVEL_5 = "Casual - Max L5"
 MAX_LEVEL_10 = "Normal - Max L10"
