@@ -7,6 +7,7 @@ Date:
      - construction robot handles building proxy spawners.
      - logistic robot handles the dropship role.
      - Vanilla race now support all features of ERM mod.
+     - Added 4 races split in map generation setting. You can up to have 4 races in nauvis.
 
   Changes:
      - Biters now support movement speed multiplier.
